--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: Welcome to maxrebos homepage
+description: Nothing to descibe really, just learning and test stuff
