--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: Welcome to maxrebos homepage
-description: Nothing to descibe really, just learning and test stuff
+title: Welcome to the maxrebo band homepage
+description: Use the force and don't be a dickhead!
